Crash when inserting a new node after linking a geometry nodes modifier to another object #95756

Closed
opened 2022-02-13 21:11:49 +01:00 by Leon Schittek · 8 comments
Member

System Information
Operating system: macOS-11.6.2-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.7

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-12 19:13, hash: 52be063012
Worked: I can't reproduce the crash in 3.1.0
Caused by c8cca88851

Short description of error
Linking a geometry nodes modifier to another object and then inserting a node into the link crashes Blender.

geo-nodes-crash.mp4

Exact steps for others to reproduce the error
Follow the steps in the video:

  • Open the attached .blend file
  • Link the modifiers from the object Cube to the object Cube.001 via drag and drop in the outliner
  • Add a new node (it doesn't matter which node) to the node tree of the geometry nodes modifier and insert it directly in the link

Interestingly the crash does not happen if you save, quit Blender and then reload the file after linking the modifier to the second cube.
linked-geo-nodes-crash.blend

Crash log:
linked-geo-nodes-crash.crash.txt

**System Information** Operating system: macOS-11.6.2-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-16.5.7 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-12 19:13, hash: `52be063012` Worked: I can't reproduce the crash in 3.1.0 Caused by c8cca88851 **Short description of error** Linking a geometry nodes modifier to another object and then inserting a node into the link crashes Blender. [geo-nodes-crash.mp4](https://archive.blender.org/developer/F12865568/geo-nodes-crash.mp4) **Exact steps for others to reproduce the error** Follow the steps in the video: - Open the attached .blend file - Link the modifiers from the object `Cube` to the object `Cube.001` via drag and drop in the outliner - Add a new node (it doesn't matter which node) to the node tree of the geometry nodes modifier and insert it directly in the link Interestingly the crash does not happen if you save, quit Blender and then reload the file after linking the modifier to the second cube. [linked-geo-nodes-crash.blend](https://archive.blender.org/developer/F12865567/linked-geo-nodes-crash.blend) Crash log: [linked-geo-nodes-crash.crash.txt](https://archive.blender.org/developer/F12865687/linked-geo-nodes-crash.crash.txt)
Author
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thank you @lone_noel for reporting. I can confirm.

Searching for the culprit commit...

Thank you @lone_noel for reporting. I can confirm. Searching for the culprit commit...
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Crash caused by c8cca88851
cc @Sergey

Worked: I can't reproduce the crash in 3.1.0

But I can reproduce on 3.1.0 (229d0ace02). Haven't checked yet on recent 3.1.0 build

Crash caused by c8cca88851 cc @Sergey > Worked: I can't reproduce the crash in 3.1.0 But I can reproduce on 3.1.0 (229d0ace026f). Haven't checked yet on recent 3.1.0 build
Sergey Sharybin self-assigned this 2022-02-14 17:57:20 +01:00

This issue was referenced by 6ae08da5c8

This issue was referenced by 6ae08da5c8a1b39cfba0c8c3bd567321d0768f28

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95756
No description provided.